feat: Initialized Landing Page

--- a/app/globals.css
+++ b/app/globals.css
@@ -35,7 +35,7 @@ body {
 .header{
   width: 100%;
   padding: 20px 100px;
-  background: black;
+  background: #03254c;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -62,6 +62,69 @@ body {
 
 .navbar a:hover{
   transform: scale(1.2);
-  text-shadow: 0 0 10px white,
-               0 0 10px white;
+}
+
+.tagline-container{
+  width: 100%;
+  padding: 100px 100px;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  background-color: white;
+  color: black;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.tagline-head{
+  font-size: 48px;
+  font-weight: 700;
+  text-align: center;
+  padding-bottom: 5vh;
+}
+
+.tagline{
+  font-size: 24px;
+  font-weight: 500;
+  text-align: center;
+  color: rgb(87, 82, 82);
+}
+
+.kesan-container{
+  width: 100%;
+  display: flex;
+  height: 75vh;
+  color: white;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.foto-alumni{
+  width: 40%;
+  background-color: rgb(87, 82, 82);
+}
+
+.kesan-pesan{
+  width: 60%;
+  padding-top: 10vh;
+  padding-bottom: 10vh;
+  padding-left: 8vh;
+  padding-right: 10vh;
+  background-color: rgb(198, 194, 194);
+}
+
+.kesan-alumni{
+  font-size: 48px;
+  font-weight: 700;
+  padding-bottom: 3vh;
+}
+
+.nama-alumni{
+  font-size: 24px;
+  font-weight: 500;
+  padding-bottom: 2vh;
+}
+
+.posisi-alumni{
+  font-size: 18px;
+  font-weight: 500;
+  padding-bottom: 2vh;
 }
