--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -32,8 +33,12 @@ body {
   }
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 p{
-  font: poppins;
+  font-family: 'Poppins', sans-serif;
 }
 
 .header{
@@ -76,7 +81,6 @@ p{
   height: 510px;
   background-color: white;
   color: black;
-  font: poppins;
 }
 
 .tagline-head{
@@ -145,6 +149,18 @@ p{
   width: 218px;
 }
 
+.menu-button:hover{
+  transform: scale(1.1);
+  z-index: 2;
+  transition: transform 0.3s ease;
+}
+
+.menu-button-img:hover{
+  transform: scale(1.1);
+  z-index: 2;
+  transition: transform 0.3s ease;
+}
+
 .pekerjaan-button, .perusahaan-button, .kontak-button, .prodi-button{
   margin-left: 65px;
   margin-right: 65px;
@@ -178,6 +194,12 @@ p{
   font-size: 24px;
   font-weight: 400;
   font: poppins;
+}
+
+.pekerjaan-link :hover, .perusahaan-link :hover, .prodi-link :hover{
+  transform: scale(1.1);
+  z-index: 2;
+  transition: transform 0.3s ease;
 }
 
 .kontak{
@@ -269,18 +291,18 @@ p{
   font-size: 18px;
   font-weight: 400;
   padding: 0px 5px;
-  font: poppins;
+  outline: none;
 }
 
 .komplain-text textarea{
   border: none;
+  outline: none;
   background-color: #e5e8ed;
   width: 100%;
   height: 100%;
   font-size: 18px;
   font-weight: 400;
   padding: 0px 5px;
-  font: poppins;
   resize: none;
 }
 
@@ -304,5 +326,61 @@ p{
   color: white;
   font-size: 16px;
   font-weight: 500;
-  font: poppins;
+}
+
+.komplain-button button:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transform: scale(1.1);
+  transition: transform 0.2s ease;
+}
+
+.footer{
+  width: 100%;
+  height: 111px;
+  background-color: #143562;
+  display: flex;
+}
+
+.footer-logo{
+  height: 100%;
+  width: 30%;
+  object-fit: cover;
+  border-radius: 10px;
+  padding: 26px 0px 26px 61px;
+}
+
+.footer-contact{
+  width: 40%;
+  color: white;
+  font-size: 20px;
+  font-weight: 500;
+  padding-right: 100px;
+}
+
+.footer-contact-text{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 10px;
+}
+
+.footer-media{
+  width: 30%;
+  color: white;
+  font-size: 20px;
+  font-weight: 500;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-media-text{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-media-icon{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
