Fix: Authentication Routing

--- a/app/globals.css
+++ b/app/globals.css
@@ -533,9 +533,18 @@ textarea::placeholder{
   color: white !important; /* Set text color to white */
   background-color: #1A3594; /* Blue background color */
   padding: 10px 20px; /* Padding for better appearance */
-  margin-left: 40px;
   text-decoration: none;
   border-radius: 30px; /* Rounded edges */
+  transition: background-color 0.3s ease, font-weight 0.3s ease;
+  cursor: pointer; /* Change cursor to a hand */
+}
+
+.dropdown-button span{
+  display: inline-flex;
+  position: relative;
+  font-size: 18px;
+  font-weight: 500;
+  color: white !important; /* Set text color to white */
   transition: background-color 0.3s ease, font-weight 0.3s ease;
   cursor: pointer; /* Change cursor to a hand */
 }
@@ -564,8 +573,9 @@ textarea::placeholder{
   z-index: 1;
 }
 
+
 /* Style for dropdown links */
-.dropdown-menu a {
+.dropdown-menu a, .dropdown-menu button{
   padding: 10px;
   text-decoration: none;
   color: white;
@@ -573,14 +583,24 @@ textarea::placeholder{
   border: none; /* Remove white lines between links */
   transition: background-color 0.3s ease, box-shadow 0.3s ease;
 }
+.dropdown-menu button{
+  display: inline-flex;
+  position: relative;
+  margin-left: 40px;
+  font-size: 18px;
+  font-weight: 500;
+  color: white !important; /* Set text color to white */
+  transition: background-color 0.3s ease, font-weight 0.3s ease;
+  cursor: pointer; /* Change cursor to a hand */
+}
 
-.dropdown-menu a:hover {
+.dropdown-menu a:hover, .dropdown-menu button:hover {
   background-color: rgba(255, 255, 255, 0.1); /* Slightly white background on hover */
   border-radius: 8px; /* Rounded corners on hover */
   text-decoration: none !important;
 }
 
 /* Remove border from the last link (not necessary since borders are removed) */
-.dropdown-menu a:last-child {
+.dropdown-menu a:last-child, .dropdown-menu button:last-child {
   border-bottom: none;
 }
