--- a/app/globals.css
+++ b/app/globals.css
@@ -222,7 +222,7 @@ p{
   font-weight: 700;
   color: white;
   padding-bottom: 10px;
-  padding: 0px 176px;
+  padding: 0px 100px;
 }
 
 .fakultas-article {
@@ -243,6 +243,7 @@ p{
 
 .fakultas-foto img {
   width: 100%; /* Scale the image to fit the container width */
+  border-radius: 20px;
   height: auto; /* Maintain aspect ratio */
   object-fit: cover; /* Cover the container while maintaining aspect ratio */
 }
